[gd_scene load_steps=3 format=3 uid="uid://rk6wgaxlm48i"]

[ext_resource type="Theme" uid="uid://3b6jfloh1m1l" path="res://Resources/black_and_white_theme/black_and_white.tres" id="1_cww3b"]
[ext_resource type="Script" uid="uid://crwdr1rowhyb8" path="res://Scripts/Menus/costumization.gd" id="1_ehjfw"]

[node name="Costumization" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cww3b")
script = ExtResource("1_ehjfw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -78.0
offset_right = 130.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Base_Engine" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Base Engine"

[node name="Pulse_Engine" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Pulse Engine"

[node name="Burst_Engine" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Burst Engine"

[node name="Supercharged_Engine" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Supercharged Engine"

[node name="Container" type="Container" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = 137.0
offset_bottom = 137.0
grow_horizontal = 2

[node name="PreviewSprite" type="Sprite2D" parent="Container"]
scale = Vector2(2, 2)

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 63.0
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/Base_Engine" to="." method="_on_base_engine_pressed"]
[connection signal="pressed" from="VBoxContainer/Pulse_Engine" to="." method="_on_pulse_engine_pressed"]
[connection signal="pressed" from="VBoxContainer/Burst_Engine" to="." method="_on_burst_engine_pressed"]
[connection signal="pressed" from="VBoxContainer/Supercharged_Engine" to="." method="_on_supercharged_engine_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
